# dephy-edge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yml  docker-git-release.sh  rumqttd.toml
.cargo/: config.toml
crates/borsher-macro/: Cargo.toml
crates/borsher-macro/src/: lib.rs
crates/dephy-types/: Cargo.toml
crates/dephy-types/src/: lib.rs  message.rs  preludes.rs  ptp_message.rs
js-packages/dephy-borsh-types/: package-lock.json  package.json
js-packages/dephy-borsh-types/src/: index.js
js-packages/dephy-types/: package.json
nostr-read-demo/: package.json
nostr-read-demo/src/: constants.js  custom.js  main.js  message.js
read-demo/: build_pb.sh  index.js  start.sh
read-demo/proto/messages/dephy/: index.ts
src/: app_main.rs  crypto.rs  http.rs  lib.rs  main.rs  mqtt_broker.rs  nostr.rs  preludes.rs  rings.rs
src/proto/: message.proto
