[package]
name = "dephy-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*", "vendor/*"]

[dependencies]
bytes = "1.5.0"
futures = "0.3.28"
futures-util = { version = "0.3.28", features = ["futures-sink"] }
rumqttd = "0.18.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.9"
anyhow = { version = "1.0.75", features = ["backtrace"] }
env_logger = "0.10"
log = "0.4"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
serde = "1.0.188"
primitive-types = "0.12.1"
chrono = "0.4.31"
dashmap = { version = "5.5.3", features = ["serde"] }
dotenv = { version = "0.15.0" }
hex = "0.4.3"
k256 = { version = "0.13.1", features = ["default", "ecdh", "ecdsa-core", "serde", "ecdsa", "alloc"] }
rand_core = "0.6.4"
clap = { version = "4.4.6", features = ["env"] }
config = "0.13.3"
sha3 = "0.10.8"
nostr-sdk = "0.24.0"
prost = "0.12.1"
warp = "0.3.6"
bs58 = "0.5.0"
dephy-types = { version = "0.1.0", path = "crates/dephy-types" }

[build-dependencies]

[[bin]]
name = "dephy-edge"
path = "src/bin/dephy_edge.rs"

[[bin]]
name = "dephy-edge-utils"
path = "src/bin/utils.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
